SUBDIRS = about community images start support projects resources learn i18n press faqs include friends fonts img contact roadmap softwaremap
#vuntz: disable the tour subdir for now since it breaks the build and we need an urgent fix for 2.16
#tour

urlpath =

page_SCRIPTS = \
	.htaccess

page_DATA = \
	index.html \
	default.css \
	frontpage.css \
	protest.css \
	null.css \
	WGO-FOOTER.html \
	WGO-HEADER.html \
	robots.txt \
	favicon.ico

include $(top_srcdir)/rules.common
