SUBDIRS = about community css images start support resources learn i18n press faqs include friends new-friends fonts img contact mobile
#diegoe: disable softwaremap now that there's no gnomefiles.org (20080804)
#vuntz: disable the tour subdir for now since it breaks the build and we need an urgent fix for 2.16
#tour

urlpath =

page_SCRIPTS = \
	.htaccess

page_DATA = \
	index.html \
	default.css \
	frontpage.css \
	protest.css \
	null.css \
	WGO-FOOTER.html \
	WGO-HEADER.html \
	robots.txt \
	favicon.ico

include $(top_srcdir)/rules.common
