SUBDIRS=python backup images orbit-docs orbit-faq 

urlpath = /ORBit2

page_SCRIPTS=go.css                \
               index.html          \
               news.html           \
               documentation.html  \
               download.html       \
               faq.html            \
               contact.html        \
               appletstutorial.html \
               orbit-python.pdf    \
               legal.xml           \
               orbit-docs.tar.gz   \
               guadec2004.sxi  linuxtag2004.sxi

include $(top_srcdir)/rules.common
