SUBDIRS=\
	development	\
	documentation	\
	images		\
	screenshots

urlpath = /epiphany

page_DATA=\
	default.css		\
	epiphany.css		\
	epiphany-old.css	\
	index.html		\
	resources.html		\
	extensions.html		\
	extensions.xhtml	\
	smartbookmarks.html	\
	bugreports.xhtml

page_SCRIPTS=\
	.htaccess

include $(top_srcdir)/rules.common
