SUBDIRS=							\
		images						\
		files

urlpath = /garnome/

page_SCRIPTS=						\
			deps-list-fc.html		\
			deps-list.html			\
			deps-list-ubuntu.html	\
			devel.html				\
			docs.html				\
			faq.html				\
			garnome_man.html		\
			index.html				\
			scripts.html

page_DATA=							\
			default.css				\
			garnome.css

include $(top_srcdir)/rules.common
