SUBDIRS= 

urlpath = /gb

page_SCRIPTS=bg.jpg			\
	    foot-transparent.gif	\
	    index.html			\
	    gb-0.0.12			\
	    gb-0.0.13			\
	    gb-0.0.14			\
	    gb-0.0.15			\
	    gb-0.0.16			\
	    gb-0.0.17			\
	    gb-0.0.18			\
	    gb-0.0.19			\
	    gb-0.0.20			\
	    gb-tc-vbp.jpeg		\
	    gnomebasic.png		\
	    gnomebasic2.png		\
	    gnome-basic.jpeg		
	    
include $(top_srcdir)/rules.common
