SUBDIRS= new-pics doc images func-tests announcements changelogs style

urlpath = /gnumeric

page_SCRIPTS=index.shtml		\
		contact-info.shtml	\
		downloads.shtml		\
		footer.shtml		\
		header-begin.shtml	\
		header-end.shtml	\
		how-to-help.shtml	\
		mailing-list.shtml	\
		to-do.shtml		\
		credits.shtml		\
		faq.shtml		\
		features.shtml		\
		screenshots.shtml	\
		technology.shtml	\
		past-news.shtml		\
		building.shtml		\
		function-info.shtml	\
		functions.shtml

include $(top_srcdir)/rules.common

# Commented out because this breaks the build. murrayc.
#install-exec-hook:
#	ls -lR $(pagedir) >$(pagedir)/files
