urlpath = /latour/

page_SCRIPTS= \
	.htaccess

page_DATA = \
	index.html \
	index.html.en \
	index.html.es \
	index.html.pt \
	layout.css \
	latinamericatour.css \
    latour-logo-2008.png \
    topleft.png \
    topright.png \
    bottomleft.png \
    bottomright.png \
	latour-logo.png

include $(top_srcdir)/rules.common
