#SUBDIRS= 

urlpath=/projects/libgsf

page_SCRIPTS= 	\
    api.html								\
    gsf-Bononbo.html							\
    gsf-Compression.html						\
    gsf-GIOChannel.html							\
    gsf-GnomeVFS.html							\
    gsf-Infile-reading-structed-files.html				\
    gsf-Input-from-unstructured-files.html				\
    gsf-MS-OLE2.html							\
    gsf-Outfile-writing-structed-files.html				\
    gsf-Output-to-unstructured-files.html				\
    gsf-Reading-and-Writing-from-local-files-and-directories.html	\
    gsf-Structured-Blobs.html						\
    gsf-Text.html							\
    gsf-XML-and-libxml.html						\
    gsf-Zip.html							\
    gsf-memory.html							\
    gsf-metadata.html							\
    gsf-utils.html							\
    index.html								\
    into.html								\
    io.html								\
    ix01.html								\
    misc.html								\
    parsers.html							\
    sources.html							\
    \
    style.css								\
    \
    home.png								\
    left.png								\
    right.png								\
    up.png

include $(top_srcdir)/rules.common
