#SUBDIRS= 

urlpath = /libgsf

page_SCRIPTS= 	\
	api.html	\
	dependencies.html	\
	gsf-blobs.html	\
	gsf-Bononbo.html	\
	GsfClipData.html	\
	gsf-Compression.html	\
	gsf-GIOChannel.html	\
	gsf-GIO.html	\
	gsf-GnomeVFS.html	\
	gsf-index.html	\
	gsf-Infile-reading-structed-files.html	\
	gsf-Input-from-unstructured-files.html	\
	gsf-memory.html	\
	gsf-metadata.html	\
	gsf-MS-OLE2.html	\
	gsf-OASIS-Open-Document.html	\
	gsf-Outfile-writing-structed-files.html	\
	gsf-Output-to-unstructured-files.html	\
	gsf-Reading-and-Writing-from-local-files-and-directories.html	\
	gsf-Text.html	\
	gsf-users.html	\
	gsf-utils.html	\
	gsf-XML-and-libxml.html	\
	gsf-Zip.html	\
	history.html	\
	index.html	\
	intro.html	\
	io.html	\
	misc.html	\
	parsers.html	\
	sources.html	\
	\
	style.css	\
	\
	home.png	\
	left.png	\
	right.png	\
	up.png

include $(top_srcdir)/rules.common
