SUBDIRS=images documentation

urlpath = /nautilus-python/

page_SCRIPTS =	development.html        \
        documentation.html              \
        download.html                   \
        index.html                      \
        news.html                       \
		default.css


include $(top_srcdir)/rules.common

