SUBDIRS=		\
	images

urlpath = /sabayon

page_SCRIPTS=			\
	sabayon.css		\
	index.html		\
	testing.html		\
	developing.html		\
	helping.html		\
	config.html		\
	ldap.html		\
	format.html		\
	brownbar.jpg		\
	brownbarTop.jpg		\
	shadow.gif		\
	title01.jpg		\
	title02.jpg

include $(top_srcdir)/rules.common
