urlpath = /solang/

page_SCRIPTS= \
	download.shtml \
	index.shtml \
	header.shtml \
	footer.shtml \
	$(NULL)

includesdir=$(pagedir)/includes
includes_DATA = \
	includes/news.shtml \
	includes/unstable.shtml \
	$(NULL)

themedir=$(pagedir)/themes
theme_DATA = \
	themes/document.all.css \
	themes/document.screen.css \
	$(NULL)

themeimgdir = $(themedir)/images
themeimg_DATA = \
	themes/images/title.png \
	themes/images/gnome.png \
	themes/images/top-bg.png \
	$(NULL)

imagesdir = $(pagedir)/images
images_DATA =\
	images/applications-development.png \
	images/application-x-executable.png \
	images/logo.png \
	images/favicon.png \
	images/internet-group-chat.png \
	images/package-x-generic.png \
	$(NULL)

shadowboximagesdir = $(pagedir)/shadowbox/images
shadowboximages_DATA =\
	shadowbox/images/loading.gif \
	shadowbox/images/loading-light.gif \
	$(NULL)

shadowboxcssdir = $(pagedir)/shadowbox/css
shadowboxcss_DATA = \
	shadowbox/css/shadowbox.css \
	shadowbox/css/shadowbox-light.css \
	$(NULL)

shadowboxjsdir = $(pagedir)/shadowbox/js
shadowboxjs_DATA = \
	shadowbox/js/shadowbox.js \
	shadowbox/js/yui-utilities.js \
	shadowbox/js/shadowbox-yui.js \
	$(NULL)

include $(top_srcdir)/rules.common
