urlpath = /vinagre/

page_SCRIPTS= 	index.html \
		about.html \
		downloads.html \
		prosimii-print.css \
		prosimii-screen-alt.css \
		prosimii-screen.css \
		screenshots.html \
		vinagre-connected.png \
		vinagre-connected-sm.png \
		vinagre-fullscreen.png \
		vinagre-fullscreen-sm.png \
		vinagre-no-scaling.png \
		vinagre-no-scaling-sm.png \
		vinagre-scaling.png \
		vinagre-scaling-sm.png

include $(top_srcdir)/rules.common
