SUBDIRS=

urlpath=/account

page_SCRIPTS=change_email-complete.php \
    first.php \
	pending.php \
	change_email-confirm.php \
	index.php \
	pending-resend.php \
	change_email.php \
	login.php \
	register.php \
	change_pw.php \
	logout.php \
	setlang.php \
	change_realname.php \
	lostlogin.php \
	suspended.php \
	change_timezone.php \
	lostpw-confirm.php \
	verify.php \
	deleted.php \
	updateprefs.php \
	lostpw.php

include $(top_srcdir)/rules.common
