SUBDIRS=

urlpath=/admin

page_SCRIPTS=add_language.php \
	lastlogins.php \
	search.php \
	admin_utils.php \
	approve-pending.php \
	massmail_execute.php \
	user_changepw.php \
	groupedit-add.php \
	massmail.php \
	useredit.php \
	groupedit.php \
	newgroup.php \
	userlist.php \
	grouplist.php \
	newprojectmail.php \
	index.php \
	responses_admin.php

include $(top_srcdir)/rules.common
