SUBDIRS =

urlpath = /friends

page_SCRIPTS = \
	index.html \
	thanks.html \
	donors.html \
	donors_2002.html \
	donors_2003.html \
	donors_2004.html \
	donors_2005.html \
	check.html

include $(top_srcdir)/rules.common

misc_images = \
	donate.png \
	swag.png
	
page_DATA=$(misc_images)

EXTRA_DIST=$(page_DATA)
