SUBDIRS = banners css ruler images js amazon

urlpath = /friends

page_SCRIPTS = \
	about-foundation.html \
	index.html \
	previous-donors.html \
	step2.php \
	promote.html \
	thank-you.php \
        a11y-testomonial.html \
	a11y-banner.php \
	a11y-testimonial-2.php \
	a11y-testimonial-2-es.php \
	.htaccess

include $(top_srcdir)/rules.common

page_DATA =

EXTRA_DIST=$(page_DATA)
